terraform/aws/pardotops/dc_access.tf
resource "aws_eip" "dc_access_00" {
  vpc = true
} # CLAIMED: nat gateway for pardot0-ue1

resource "aws_eip" "dc_access_01" {
  vpc = true
}

resource "aws_eip" "dc_access_02" {
  vpc = true
}

resource "aws_eip" "dc_access_03" {
  vpc = true
}

resource "aws_eip" "dc_access_04" {
  vpc = true
}

resource "aws_eip" "dc_access_05" {
  vpc = true
}

resource "aws_eip" "dc_access_06" {
  vpc = true
}

resource "aws_eip" "dc_access_07" {
  vpc = true
}

resource "aws_eip" "dc_access_08" {
  vpc = true
}

resource "aws_eip" "dc_access_09" {
  vpc = true
}
